tests/fixtures/invalid/bool_lshift_none.py
# Cannot left shift Bool and None
x: bool = True << None
